2012-09-23 Jeremy Brubaker <jbru362@gmail.com>

* cli.c (game_loop, print_menu): Changed menu selections to letters, not numbers

2012-09-23 Jeremy Brubaker <jbru362@gmail.com>

* game.c (mark_cell): Do not allow player to mark an uncovered cell

2012-09-23 Jeremy Brubaker <jbru362@gmail.com>

* game.c, game.h (uncover_cell): Return LOSER if player uncovers a mine
(flag_cell): Return WINNER if all mines flagged