@@ -1,5 +1,10 @@
 2012-09-23 Jeremy Brubaker <jbru362@gmail.com>
 
+* jmines.c (process_options, print_help, print_version): Rudimentary command
+line option processing
+
+2012-09-23 Jeremy Brubaker <jbru362@gmail.com>
+
 * cli.c (game_loop, print_menu): Changed menu selections to letters, not numbers
 
 2012-09-23 Jeremy Brubaker <jbru362@gmail.com>
